--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "com-darryncampbell-cordova-plugin-intent",
+  "name": "com.tiperes.cordova-plugin-intent",
   "version": "2.2.0",
   "description": "General purpose intent shim layer for cordova appliations on Android.  Handles various techniques for sending and receiving intents.",
   "main": "intentShim.js",
   "cordova": {
-    "id": "com-darryncampbell-cordova-plugin-intent",
+    "id": "com.tiperes.cordova-plugin-intent",
     "platforms": [
       "android"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/darryncampbell/darryncampbell-cordova-plugin-intent.git"
+    "url": "https://github.com/tiperes/cordova-plugin-intent.git"
   },
   "keywords": [
     "ecosystem:cordova",
