--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
         <clobbers target="intentShim" />
     </js-module>
     
-    <hook type="after_prepare" src="hooks/after_prepare.js" />
+    <hook type="after_plugin_add" src="hooks/after_prepare.js" />
 	
 	<!-- android -->
     <platform name="android">
