--- a/plugin.xml
+++ b/plugin.xml
@@ -5,10 +5,10 @@
         <clobbers target="intentShim" />
     </js-module>
     
-    <hook type="after_plugin_add" src="hooks/after_prepare.js" />
-	
-	<!-- android -->
+    <!-- android -->
     <platform name="android">
+	<hook type="after_prepare" src="hooks/android/after_prepare.js" />
+	<hook type="after_plugin_add" src="hooks/android/after_prepare.js" />
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="IntentShim" >
                 <param name="android-package" value="com.tiperes.cordova.plugin.intent.IntentShim"/>
