--- a/plugin.xml
+++ b/plugin.xml
@@ -22,11 +22,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest" mode="merge">
-            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-        </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest" mode="merge">
-            <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
         </config-file>
         <config-file target="AndroidManifest.xml" platform="android" parent="/manifest/application" mode="merge">
             <provider
