--- a/plugin.xml
+++ b/plugin.xml
@@ -16,13 +16,13 @@
                 <param name="onload" value="true"/>
             </feature>
         </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest/application/activity" mode="merge">
+        <config-file target="AndroidManifest.xml" parent="application/activity" mode="merge">
             <intent-filter>
                 <action android:name="com.tiperes.cordova.plugin.intent.ACTION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </config-file>
-        <config-file target="AndroidManifest.xml" parent="/manifest/application" mode="merge">
+        <config-file target="AndroidManifest.xml" parent="application" mode="merge">
             <provider
                 android:name="com.tiperes.cordova.plugin.intent.CordovaPluginIntentFileProvider"
                 android:authorities="${applicationId}.cordova.plugin.intent.fileprovider"
