--- a/plugin.xml
+++ b/plugin.xml
@@ -1,35 +1,30 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.tiperes.cordova-plugin-intent" version="2.2.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-intent" version="2.2.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>Intent Shim</name>
     <js-module name="IntentShim" src="www/IntentShim.js">
         <clobbers target="intentShim" />
     </js-module>
     
-    <hook type="after_prepare" src="hooks/after_prepare.js" />
-	
-	<!-- android -->
+    <!-- android -->
     <platform name="android">
+	<hook type="after_prepare" src="hooks/android/after_prepare.js" />
+	<hook type="after_plugin_add" src="hooks/android/after_plugin_add.js" />
+	
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="IntentShim" >
                 <param name="android-package" value="com.tiperes.cordova.plugin.intent.IntentShim"/>
                 <param name="onload" value="true"/>
             </feature>
         </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest/application/activity" mode="merge">
+        <config-file target="AndroidManifest.xml" parent="application/activity" mode="merge">
             <intent-filter>
                 <action android:name="com.tiperes.cordova.plugin.intent.ACTION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest" mode="merge">
-            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-        </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest" mode="merge">
-            <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-        </config-file>
-        <config-file target="AndroidManifest.xml" platform="android" parent="/manifest/application" mode="merge">
+        <config-file target="AndroidManifest.xml" parent="application" mode="merge">
             <provider
-                android:name="androidx.core.content.FileProvider"
+                android:name="com.tiperes.cordova.plugin.intent.CordovaPluginIntentFileProvider"
                 android:authorities="${applicationId}.cordova.plugin.intent.fileprovider"
                 android:exported="false"
                 android:grantUriPermissions="true">
